fix: resolve all setup issues and make scripts executable

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,10 +7,16 @@
 [user]
 	name = Brandon
 	email = slinkardbrandon@gmail.com
-	signingkey = BC16D7232E446846
+	# Uncomment and set your GPG signing key after importing it:
+	# To set up GPG signing:
+	# 1. Import your GPG key: gpg --import your-private-key.asc
+	# 2. List keys: gpg --list-secret-keys --keyid-format=long
+	# 3. Set the key here and uncomment the lines below
+	# signingkey = YOUR_GPG_KEY_ID
 
 [commit]
-	gpgsign = true
+	# Uncomment to enable GPG signing for all commits
+	# gpgsign = true
 
 [push]
 	autoSetupRemote = true
